panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__struct__test_error_no_such_member.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/struct/test_error_no_such_member.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: struct type `struct T~0 complete` does not have a member named `does_not_exist`
    ╭─[panko/tests/cases/struct/test_error_no_such_member.c:15:7]
    │
 15 │     t.does_not_exist = 42;
    │     ┬ ───────┬──────  
    │     │        ╰──────── this member does not exist
    │     │                 
    │     ╰───────────────── this expression has type `struct T~0 complete`
────╯

Error: cannot assign to this expression because it is not an lvalue
    ╭─[panko/tests/cases/struct/test_error_no_such_member.c:15:7]
    │
 15 │     t.does_not_exist = 42;
    │       ───────┬──────  
    │              ╰──────── this expression is not an lvalue
────╯

Error: invalid implicit conversion from `int` to `void`
    ╭─[panko/tests/cases/struct/test_error_no_such_member.c:15:24]
    │
 15 │     t.does_not_exist = 42;
    │                        ─┬  
    │                         ╰── this is of type `int`, which cannot be implicitly converted to `void`
────╯

Error: union type `union U~1 complete` does not have a member named `wat`
    ╭─[panko/tests/cases/struct/test_error_no_such_member.c:16:7]
    │
 16 │     u.wat = "wat";
    │     ┬ ─┬─  
    │     │  ╰─── this member does not exist
    │     │      
    │     ╰────── this expression has type `union U~1 complete`
────╯

Error: cannot assign to this expression because it is not an lvalue
    ╭─[panko/tests/cases/struct/test_error_no_such_member.c:16:7]
    │
 16 │     u.wat = "wat";
    │       ─┬─  
    │        ╰─── this expression is not an lvalue
────╯

Error: invalid implicit conversion from `ptr<char>` to `void`
    ╭─[panko/tests/cases/struct/test_error_no_such_member.c:16:13]
    │
 16 │     u.wat = "wat";
    │             ──┬──  
    │               ╰──── this is of type `ptr<char>`, which cannot be implicitly converted to `void`
────╯

Error: struct type `struct T~0 complete` does not have a member named `no_such_struct_member`
    ╭─[panko/tests/cases/struct/test_error_no_such_member.c:19:28]
    │
 19 │         offsetof(struct T, no_such_struct_member)
    │                  ────┬───  ──────────┬──────────  
    │                      │               ╰──────────── this member does not exist
    │                      │                            
    │                      ╰──────────────────────────── this expression has type `struct T~0 complete`
────╯

Error: union type `union U~1 complete` does not have a member named `no_such_union_member`
    ╭─[panko/tests/cases/struct/test_error_no_such_member.c:20:29]
    │
 20 │         + offsetof(union U, no_such_union_member);
    │                    ───┬───  ──────────┬─────────  
    │                       │               ╰─────────── this member does not exist
    │                       │                           
    │                       ╰─────────────────────────── this expression has type `union U~1 complete`
────╯
